# py-migrate-wrapper

./:  claude.md  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: WORKFLOW_FLOW.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
pglite-server/: .gitignore  README.md  package.json
src/migrate_wrapper/: __init__.py  command.py  config.py  exceptions.py  models.py  scanner.py  wrapper.py
tests/: conftest.py  test_base.py  test_migrate_wrapper_postgres.py  test_migrate_wrapper_sqlite.py
